tests/requests/errors/bad_chunk.req
POST / HTTP/1.1
Host: localhost:8080
User-Agent: curl/7.58.0
Accept: */*
Transfer-Encoding: chunked
Content-Type: application/x-www-form-urlencoded

3
tut
9
u
0

